<resources>
    <string name="app_name">SoWieSo</string>

    <string name="title_expense_list">Expenses</string>
    <string name="title_expense_add">Add expense</string>
    <string name="title_expense_edit">Edit expense</string>
    <string name="title_login">Login</string>
    <string name="title_dialog_manage_expense">Manage expense</string>
    <string name="title_dialog_manage_car_consumption">Manage car consumption</string>
    <string name="title_expense_report">Expense reports</string>
    <string name="title_expense_report_year">Years report</string>
    <string name="title_expense_report_yearmonth">Months report</string>
    <string name="title_expense_report_categoryyearmonth">Categories report</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_inventory_car_consumption_list">Car consumption</string>
    <string name="title_inventory_car_consumption_add">Add consumption</string>
    <string name="title_inventory_car_consumption_edit">Edit consumption</string>
    <string name="title_confirm">Confirm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_name">Name</string>
    <string name="label_date_pattern">yyyy-mm-dd</string>
    <string name="label_amount_pattern">0.00 [PLN]</string>
    <string name="label_refuel_amount_pattern">0.00 [l]</string>
    <string name="label_distance_pattern">0.0 [km]</string>
    <string name="label_price_pattern">0.00 [PLN]</string>
    <string name="label_description">Description</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_login">Login</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_load_configuration">Load configuration</string>
    <string name="action_save_on_server">Save on server</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>

    <string name="msg_working">working . . .</string>
    <string name="msg_required_name">Name is required!</string>
    <string name="msg_required_amount">Amount is required!</string>
    <string name="msg_required_date">Date is required!</string>
    <string name="msg_required_distance">Distance is required!</string>
    <string name="msg_required_price">Price is required!</string>
    <string name="msg_required_refuel_amount">Refuel amount is required!</string>
    <string name="msg_wrong_date_format">Date wrong format!</string>
    <string name="msg_category_not_selected">Category is not selected.</string>
    <string name="msg_petrol_station_not_selected">Petrol station is not selected.</string>
    <string name="msg_car_not_selected">Car is not selected.</string>
    <string name="msg_fill_correct_form">Fill correct form!</string>
    <string name="msg_data_saved">Data was saved!</string>
    <string name="msg_data_not_saved">Can not save data!</string>
    <string name="msg_forbidden">Forbidden, please login!</string>
    <string name="msg_unauthorized">Unauthorized, please login!</string>
    <string name="msg_can_not_login">Can not login. Set up username and password.</string>
    <string name="msg_are_you_sure_remove">Are you sure to remove?</string>

    <string name="manage_type_edit">Edit</string>
    <string name="manage_type_remove">Remove</string>
</resources>
