<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_login"
                android:title="@string/action_login"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_load_configuration"
                android:title="@string/action_load_configuration"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_save_on_server"
        android:title="@string/action_save_on_server"
        app:showAsAction="never" />
</menu>