<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/exp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:lines="1"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/exp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/exp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_date_pattern"
            android:inputType="date" />

        <EditText
            android:id="@+id/exp_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_amount_pattern"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/exp_desc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/label_description"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>