<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/cc_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/cc_petrol_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/cc_refuel_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_date_pattern"
            android:inputType="date" />

        <EditText
            android:id="@+id/cc_refuel_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_refuel_amount_pattern"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/cc_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_distance_pattern"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/cc_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_price_pattern"
            android:inputType="numberDecimal" />
    </LinearLayout>
</ScrollView>